knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/Contact.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>