knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Academic_Facility__c.field-meta.xml
<CustomField>
    <fullName>Academic_Facility__c</fullName>
    <formula>Account.Academic_Facility_chk__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Academic Facility</label>
    <type>Checkbox</type>
</CustomField>