knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Account_CBSA_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>Account_CBSA_Code_Description__c</fullName>
    <formula>Account.CBSA_Code_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account CBSA Code Description</label>
    <type>Text</type>
</CustomField>