knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Account_DHC_Network_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_DHC_Network_Name__c</fullName>
    <formula>Account.texcellency__DefHC_Network_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account DHC Network Name</label>
    <type>Text</type>
</CustomField>