knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Account_ED_Volume__c.field-meta.xml
<CustomField>
    <fullName>Account_ED_Volume__c</fullName>
    <formula>Account.ED_Volume__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ED Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>