knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Account_Geo_Classification__c.field-meta.xml
<CustomField>
    <fullName>Account_Geo_Classification__c</fullName>
    <formula>Account.Geographic_Classification__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Geo Classification</label>
    <type>Text</type>
</CustomField>