knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>TEXT(Account.Type)</formula>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>