knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Account_Targeting_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>Account_Targeting_Total_Score__c</fullName>
    <label>Account Targeting Total Score</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>