knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/ASM_Executive_Brief__c.field-meta.xml
<CustomField>
    <fullName>ASM_Executive_Brief__c</fullName>
    <description>Field for receiving ASM Executive Brief in Resume Parsing</description>
    <inlineHelpText>ASM Executive Brief</inlineHelpText>
    <label>Executive Brief</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>