knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Birth_County__c.field-meta.xml
<CustomField>
    <fullName>Birth_County__c</fullName>
    <label>Birth County</label>
    <length>50</length>
    <type>Text</type>
</CustomField>