knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Business_Development_Manager__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Manager__c</fullName>
    <formula>Account.Market_Manager__r.FirstName &amp; &quot; &quot; &amp; Account.Market_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Development Manager</label>
    <type>Text</type>
</CustomField>