knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Cadence_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Disposition__c</fullName>
    <label>Cadence Disposition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>