knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Client_Retention_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Retention_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Client Retention Contact</label>
    <type>Checkbox</type>
</CustomField>