knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Contact_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Status__c</fullName>
    <label>Contact Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Key Contact</fullName>
            </value>
            <value>
                <fullName>2025 - DO NOT EMAIL STATUS</fullName>
            </value>
            <value>
                <fullName>ACTIVE &lt; 12MOS</fullName>
            </value>
            <value>
                <fullName>INACTIVE &gt; 12MOS</fullName>
            </value>
            <value>
                <fullName>Monitored</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>