knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Current_HM_Incumbent_Group_Type__c.field-meta.xml
<CustomField>
    <fullName>Current_HM_Incumbent_Group_Type__c</fullName>
    <formula>Account.Current_HM_Incumbent_Group_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HM Incumbent Group Type</label>
    <type>Text</type>
</CustomField>