knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Current_ICU_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Current_ICU_Incumbent__c</fullName>
    <formula>Account.Current_ICU_Incumbent__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ICU Incumbent</label>
    <type>Text</type>
</CustomField>