knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/DEA_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>DEA_Issue_Date__c</fullName>
    <label>DEA Issue Date</label>
    <type>Date</type>
</CustomField>