knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/DEA_Number__c.field-meta.xml
<CustomField>
    <fullName>DEA_Number__c</fullName>
    <label>DEA Number</label>
    <length>9</length>
    <type>Text</type>
</CustomField>