knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/DHC_Executive_ID__c.field-meta.xml
<CustomField>
    <fullName>DHC_Executive_ID__c</fullName>
    <externalId>true</externalId>
    <label>DHC Executive ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>