knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/DHC_Hospital_Type__c.field-meta.xml
<CustomField>
    <fullName>DHC_Hospital_Type__c</fullName>
    <formula>Account.texcellency__DefHC_Hospital_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DHC Hospital Type</label>
    <type>Text</type>
</CustomField>