knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/DHC_Ownership_Status__c.field-meta.xml
<CustomField>
    <fullName>DHC_Ownership_Status__c</fullName>
    <formula>Account.texcellency__DefHC_OwnershipStatus__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DHC Ownership Status</label>
    <type>Text</type>
</CustomField>