knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/DHC_Standardized_Title__c.field-meta.xml
<CustomField>
    <fullName>DHC_Standardized_Title__c</fullName>
    <label>DHC Standardized Title</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountant</fullName>
            </value>
            <value>
                <fullName>Administrative Assistant</fullName>
            </value>
            <value>
                <fullName>Billing Officer</fullName>
            </value>
            <value>
                <fullName>Board Member</fullName>
            </value>
            <value>
                <fullName>Business Manager</fullName>
            </value>
            <value>
                <fullName>Business Office</fullName>
            </value>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Chairman</fullName>
            </value>
            <value>
                <fullName>Chief Compliance Officer</fullName>
            </value>
            <value>
                <fullName>Chief Development Officer</fullName>
            </value>
            <value>
                <fullName>Chief Executive Officer</fullName>
            </value>
            <value>
                <fullName>Chief Financial Officer</fullName>
            </value>
            <value>
                <fullName>Chief Human Resources Officer</fullName>
            </value>
            <value>
                <fullName>Chief Information Officer</fullName>
            </value>
            <value>
                <fullName>Chief Legal Officer</fullName>
            </value>
            <value>
                <fullName>Chief Marketing Officer</fullName>
            </value>
            <value>
                <fullName>Chief Medical Information Officer</fullName>
            </value>
            <value>
                <fullName>Chief Medical Officer</fullName>
            </value>
            <value>
                <fullName>Chief Nursing Officer</fullName>
            </value>
            <value>
                <fullName>Chief of Radiology</fullName>
            </value>
            <value>
                <fullName>Chief of Staff</fullName>
            </value>
            <value>
                <fullName>Chief Operating Officer</fullName>
            </value>
            <value>
                <fullName>Chief Pharmacy Officer</fullName>
            </value>
            <value>
                <fullName>Chief Quality Officer</fullName>
            </value>
            <value>
                <fullName>Chief Strategy Officer</fullName>
            </value>
            <value>
                <fullName>Coding Manager</fullName>
            </value>
            <value>
                <fullName>Commissioner</fullName>
            </value>
            <value>
                <fullName>Compliance Officer</fullName>
            </value>
            <value>
                <fullName>Contracting Executive</fullName>
            </value>
            <value>
                <fullName>Controller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>