knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/DRIP_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>DRIP_Enrolled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DRIP Enrolled</label>
    <type>Checkbox</type>
</CustomField>