knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Drivers_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Drivers_License_Number__c</fullName>
    <label>Drivers License Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>