knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/E_Verify_Status__c.field-meta.xml
<CustomField>
    <fullName>E_Verify_Status__c</fullName>
    <label>E-Verify Status</label>
    <length>200</length>
    <type>Text</type>
</CustomField>