knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Eligible_Auditor__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Auditor__c</fullName>
    <label>Eligible Auditor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audits</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Edits</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>0</fullName>
                <isActive>false</isActive>
                <label>0</label>
            </value>
            <value>
                <fullName>FALSE</fullName>
                <isActive>false</isActive>
                <label>FALSE</label>
            </value>
            <value>
                <fullName>TRUE</fullName>
                <isActive>false</isActive>
                <label>TRUE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>