knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Eligible_Coder__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Coder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible Coder</label>
    <type>Checkbox</type>
</CustomField>