knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Email_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Email_Greeting__c</fullName>
    <description>Checks the Professional Title to return Dr. LastName for physicians, and FirstName otherwise</description>
    <formula>IF(
    OR(
        TEXT(Professional_Title__c) = &quot;MD&quot;,
        TEXT(Professional_Title__c) = &quot;DO&quot;
    ),
    &quot;Dr. &quot; &amp; LastName,
    FirstName
)</formula>
    <inlineHelpText>Greeting for Emails</inlineHelpText>
    <label>Email Greeting</label>
    <type>Text</type>
</CustomField>