knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Employee_Id__c.field-meta.xml
<CustomField>
    <fullName>Employee_Id__c</fullName>
    <label>Workday Employee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>