knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Executive_Functional_Group__c.field-meta.xml
<CustomField>
    <fullName>Executive_Functional_Group__c</fullName>
    <label>Executive Functional Group</label>
    <type>TextArea</type>
</CustomField>