knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Executive_Position_Level__c.field-meta.xml
<CustomField>
    <fullName>Executive_Position_Level__c</fullName>
    <label>Executive Position Level</label>
    <type>TextArea</type>
</CustomField>