knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Functional_Group__c.field-meta.xml
<CustomField>
    <fullName>Functional_Group__c</fullName>
    <label>Functional Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Administrative/Human Resources</fullName>
            </value>
            <value>
                <fullName>Board of Directors/Trustees</fullName>
            </value>
            <value>
                <fullName>Chief Executive/President/Administrator</fullName>
            </value>
            <value>
                <fullName>Medical/Quality/Care Management</fullName>
            </value>
            <value>
                <fullName>Nurse/Nursing Executive</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>Sales/Marketing/Business Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>