knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Geographic_Preference__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Preference__c</fullName>
    <label>Geographic Preference</label>
    <type>TextArea</type>
</CustomField>