knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Geographic_PreferenceM__c.field-meta.xml
<CustomField>
    <fullName>Geographic_PreferenceM__c</fullName>
    <label>Geographic Preference</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StateGlobalPicklist</valueSetName>
    </valueSet>
</CustomField>