knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Global_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_Contact_ID__c</fullName>
    <label>Global Contact ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>