knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Global_Provider_ID__c.field-meta.xml
<CustomField>
    <fullName>Global_Provider_ID__c</fullName>
    <formula>Global_Contact_ID__c</formula>
    <label>Global Provider ID</label>
    <type>Text</type>
</CustomField>