knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Google_Search__c.field-meta.xml
<CustomField>
    <fullName>Google_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Google Search prescreen - check once complete.</inlineHelpText>
    <label>Google Search</label>
    <type>Checkbox</type>
</CustomField>