knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/I9_Completed__c.field-meta.xml
<CustomField>
    <fullName>I9_Completed__c</fullName>
    <label>I-9 Completed</label>
    <type>Date</type>
</CustomField>