knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/I9_Status__c.field-meta.xml
<CustomField>
    <fullName>I9_Status__c</fullName>
    <label>I-9 Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Section 1 In Progress</fullName>
            </value>
            <value>
                <fullName>Section 2 In Progress</fullName>
            </value>
            <value>
                <fullName>E-Verify Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>