knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Independent_Account__c.field-meta.xml
<CustomField>
    <fullName>Independent_Account__c</fullName>
    <formula>Account.Independent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Independent Account</label>
    <type>Checkbox</type>
</CustomField>