knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Role</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Auditor</fullName>
            </value>
            <value>
                <fullName>Claims Processing Executive</fullName>
            </value>
            <value>
                <fullName>Clinical Reviewer</fullName>
            </value>
            <value>
                <fullName>Coder</fullName>
            </value>
            <value>
                <fullName>Collections Management</fullName>
            </value>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>Edits</fullName>
            </value>
            <value>
                <fullName>EMR Contact</fullName>
            </value>
            <value>
                <fullName>HM Auditor</fullName>
            </value>
            <value>
                <fullName>HM Billing</fullName>
            </value>
            <value>
                <fullName>HM Coder</fullName>
            </value>
            <value>
                <fullName>HM Payment Poster</fullName>
            </value>
            <value>
                <fullName>Indexing</fullName>
            </value>
            <value>
                <fullName>Insurance Verification</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>Log Mgmt</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Operations Manager</fullName>
            </value>
            <value>
                <fullName>Patient Registrar</fullName>
            </value>
            <value>
                <fullName>Patient Registration</fullName>
            </value>
            <value>
                <fullName>Payment Posting</fullName>
            </value>
            <value>
                <fullName>Payment Posting Research</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>PreCoder</fullName>
            </value>
            <value>
                <fullName>Process Associate</fullName>
            </value>
            <value>
                <fullName>Quality Control Analyst</fullName>
            </value>
            <value>
                <fullName>Quality Control Auditor</fullName>
            </value>
            <value>
                <fullName>Refunds</fullName>
            </value>
            <value>
                <fullName>TCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>