knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Legacy_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Contact_ID__c</fullName>
    <description>Using for DataMigration purpose</description>
    <label>Legacy Contact ID</label>
    <type>TextArea</type>
</CustomField>