knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Maiden_Previous_Former_Name__c.field-meta.xml
<CustomField>
    <fullName>Maiden_Previous_Former_Name__c</fullName>
    <label>Maiden/Previous/Former Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>