knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Medical_School_Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Medical_School_Affiliation__c</fullName>
    <formula>Account.Medical_School_Affiliation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Medical School Affiliation</label>
    <type>Text</type>
</CustomField>