knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Contact/fields/Military__c.field-meta.xml
<CustomField>
    <fullName>Military__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Military</label>
    <type>Checkbox</type>
</CustomField>